--- a/CSS/moon_page_style.css
+++ b/CSS/moon_page_style.css
@@ -5,11 +5,108 @@
 }
 
 body {
-    background-image: url("/IMG/MoonBackgroound.jpg");
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    position: relative;
+
+}
+body::before {
+    content: "";
+    background-image: url("/IMG/MoonBackgroound.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-color: black;
+    position: absolute;
+    inset: 0;
+    opacity: 30%;
+    z-index: -1; /* Feito para deixar o background de fundo e conseguir alterar sua opacidade */
+}
+.Moon_img {
+    display: flex;
+    justify-content: center;
+}
+
+.Top_image {
+    width: 2000px;
+    height: 250px;
+    object-fit: cover;
+    border-style: solid;
+    border-color:black;
+}
+
+#Map_name {
+    font-family: sans-serif;
+    color: red;
+    font-weight: 545;
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+    margin-bottom: 10px;
+    padding-right: 48%;
+}
+
+.titulo {
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    margin-top: 40px;
+    font-family: sans-serif;
+}
+
+.Ee_titulo {
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 550;
+    font-style: italic;
+    font-size: 64px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.resume {
+    color: black;
+    font-family: sans-serif;
+    font-weight: 700;
+    font-size: medium;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-right: 300px;
+    padding-left: 300px;
+}
+
+.Requisitos_ee {
+    font-family: sans-serif;
+    font-size: 32px;
+    font-weight: 200;
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.Padrao_textos{
+    color: black;
+    font-family: sans-serif;
+    font-weight: 700;
+    font-size: medium;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-right: 300px;
+    padding-left: 300px;
+}
+
+
+.Reference_image{
+    width: 200px;
+    height: 150px;
+    margin-left: 350px;
+    margin-top: 50px;
 }
