--- a/CSS/moon_page_style.css
+++ b/CSS/moon_page_style.css
@@ -81,13 +81,14 @@ body::before {
     padding-left: 300px;
 }
 
-.Requisitos_ee {
+.Sub_text {
     font-family: sans-serif;
     font-size: 32px;
     font-weight: 200;
     display: flex;
     justify-content: center;
     margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .Padrao_textos{
@@ -103,10 +104,15 @@ body::before {
     padding-left: 300px;
 }
 
-
-.Reference_image{
-    width: 200px;
-    height: 150px;
-    margin-left: 350px;
+.Img_referencia {
+    display: flex;
+    justify-content: center;
     margin-top: 50px;
+}
+
+
+
+.img_texto {
+    display: flex;
+    justify-content: center;
 }
